@@ -1,6 +1,13 @@
 Changelog
 =========
 
+2015/11/17 (v0.4.7)
+ - Closes bugs :
+   - #10 Error when trying to parse 'osclass' , 'osmatch'
+     removed addresses, hostnames, status, vendor, osclass, uptime, osmatch
+     from all_protocols()
+ - Changed shebang line from python3 to python as it works with python2
+
 2015/11/13 (v0.4.6)
  - Closes bugs :
    - #10 Error when trying to parse 'osclass' , 'osmatch'
